syntax = "proto3";

package com.wheelseye.devicegateway;

import "google/protobuf/timestamp.proto";
import "device.proto";  // Import IMEI definition

option java_package = "com.wheelseye.devicegateway.protobuf";
option java_multiple_files = true;

message DeviceSession {
    string id = 1;
    IMEI imei = 2;                         // Use IMEI from device.proto
    string channel_id = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp last_activity_at = 5;
    bool authenticated = 6;
    string remote_address = 7;
    map<string, string> attributes = 8;
}
