syntax = "proto3";

package com.wheelseye.devicegateway;

option java_package = "com.wheelseye.devicegateway.protobuf";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

// Location message
message Location {
  string imei       = 1;
  google.protobuf.Timestamp timestamp = 2;
  bool gps_valid    = 3;
  double latitude   = 4;
  double longitude  = 5;
  double speed      = 6;
  double course     = 7;
  int32 satellites  = 8;
}
