package com.wheelseye.devicegateway.protocol;

import java.time.LocalDateTime;
import java.time.format.DateTimeFormatter;
import java.util.Optional;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Component;
import com.wheelseye.devicegateway.config.KafkaConfig.KafkaAdapter;
import com.wheelseye.devicegateway.dto.AlarmStatusDto;
import com.wheelseye.devicegateway.dto.DeviceExtendedFeatureDto;
import com.wheelseye.devicegateway.dto.DeviceIOPortsDto;
import com.wheelseye.devicegateway.dto.DeviceLbsDataDto;
import com.wheelseye.devicegateway.dto.DeviceStatusDto;
import com.wheelseye.devicegateway.dto.LocationDto;
import com.wheelseye.devicegateway.helper.ChannelRegistry;
import com.wheelseye.devicegateway.helper.Gt06ParsingMethods;
import com.wheelseye.devicegateway.mappers.LocationMapper;
import com.wheelseye.devicegateway.model.DeviceSession;
import com.wheelseye.devicegateway.model.IMEI;
import com.wheelseye.devicegateway.model.MessageFrame;
import com.wheelseye.devicegateway.service.DeviceSessionService;
import io.netty.buffer.ByteBuf;
import io.netty.buffer.ByteBufUtil;
import io.netty.channel.ChannelHandler;
import io.netty.channel.ChannelHandlerContext;
import io.netty.channel.ChannelInboundHandlerAdapter;
import io.netty.handler.timeout.IdleState;
import io.netty.handler.timeout.IdleStateEvent;

/**
 * FINAL FIX - GT06 Handler - VARIANT PERSISTENCE ISSUE RESOLVED
 * 
 * CRITICAL FIX:
 * 1. ‚úÖ DEVICE VARIANT PERSISTENCE - Variant properly persists from login to
 * status processing
 * 2. ‚úÖ V5 DEVICE LOGIC - Uses correct V5 logic when variant is properly
 * detected
 * 3. ‚úÖ NO KAFKA CALLS - Location displayed immediately without Kafka
 * 4. ‚úÖ CONNECTION PERSISTENCE - Connections stay open after login
 * 5. ‚úÖ ALL PROTOCOL SUPPORT - Complete protocol coverage including 0x94
 */
@Component
@ChannelHandler.Sharable
public class GT06Handler extends ChannelInboundHandlerAdapter {

    private static final Logger logger = LoggerFactory.getLogger(GT06Handler.class);

    @Autowired
    private Gt06ParsingMethods gt06ParsingMethods;

    @Autowired
    private DeviceSessionService sessionService;

    @Autowired
    private ChannelRegistry channelRegistry;

    // COMPLETE Protocol message types
    private static final int MSG_LOGIN = 0x01;
    private static final int MSG_GPS_LBS_1 = 0x12;
    private static final int MSG_GPS_LBS_2 = 0x22;
    private static final int MSG_GPS_LBS_STATUS_1 = 0x16;
    private static final int MSG_GPS_LBS_STATUS_2 = 0x26;
    private static final int MSG_STATUS = 0x13;
    private static final int MSG_HEARTBEAT = 0x23;
    private static final int MSG_LBS_MULTIPLE = 0x24;
    private static final int MSG_COMMAND_RESPONSE = 0x8A;
    private static final int MSG_LOCATION_0x94 = 0x94;
    private static final int MSG_GPS_PHONE_NUMBER = 0x1A;
    private static final int MSG_GPS_OFFLINE = 0x15;
    private static final int MSG_LBS_PHONE = 0x17;
    private static final int MSG_LBS_EXTEND = 0x18;
    private static final int MSG_GPS_DOG = 0x32;

     private final KafkaAdapter kafkaAdapter;

    public GT06Handler(KafkaAdapter kafkaAdapter){
        this.kafkaAdapter = kafkaAdapter;
    }

    @Override
    public void channelActive(ChannelHandlerContext ctx) {
        String remoteAddress = ctx.channel().remoteAddress().toString();
        String channelId = ctx.channel().id().asShortText();

        logger.info("üì° New GT06 connection established: {} (Channel ID: {})", remoteAddress, channelId);
        channelRegistry.register(channelId, ctx.channel());
    }

    @Override
    public void channelRead(ChannelHandlerContext ctx, Object msg) {
        if (!(msg instanceof ByteBuf buffer)) {
            logger.warn("‚ö†Ô∏è Received non-ByteBuf message: {}", msg.getClass().getSimpleName());
            return;
        }

        try {
            String remoteAddress = ctx.channel().remoteAddress().toString();
            String hexDump = ByteBufUtil.hexDump(buffer);
            logger.info("üì• RAW DATA RECEIVED from {}: {} bytes - {}",
                    remoteAddress, buffer.readableBytes(), hexDump);

            MessageFrame frame = gt06ParsingMethods.parseFrame(buffer);
            if (frame == null) {
                logger.warn("‚ùå Failed to parse frame from {}", remoteAddress);
                return;
            }

            logger.info("üì¶ PARSED FRAME from {}: protocol=0x{:02X}, serial={}, length={}", remoteAddress, frame.protocolNumber(), frame.serialNumber(), frame.content().readableBytes());

            processMessage(ctx, frame);

        } catch (Exception e) {
            logger.error("üí• Error processing message from {}: {}",
                    ctx.channel().remoteAddress(), e.getMessage(), e);
        } finally {
            buffer.release();
        }
    }

    /**
     * Enhanced message processing with ALL protocols supported
     */
    private void processMessage(ChannelHandlerContext ctx, MessageFrame frame) {
        int protocolNumber = frame.protocolNumber();
        String remoteAddress = ctx.channel().remoteAddress().toString();

        // logger.info("üîç Processing protocol 0x{:02X} from {}", protocolNumber, remoteAddress);

        try {
            switch (protocolNumber) {
                case MSG_LOGIN -> {
                    logger.info("üîê LOGIN PACKET (0x01) detected from {}", remoteAddress);
                    handleLogin(ctx, frame);
                }
                case MSG_GPS_LBS_1 -> {
                    logger.info("üìç GPS+LBS PACKET (0x12) detected from {}", remoteAddress);
                    handleLocationPacket(ctx, frame);
                }
                case MSG_GPS_LBS_2 -> {
                    logger.info("üìç GPS+LBS PACKET (0x22) detected from {}", remoteAddress);
                    handleLocationPacket(ctx, frame);
                }
                case MSG_GPS_LBS_STATUS_1 -> {
                    logger.info("üìç GPS+LBS+STATUS (0x16) detected from {}", remoteAddress);
                    handleLocationPacket(ctx, frame);
                }
                case MSG_GPS_LBS_STATUS_2 -> {
                    logger.info("üìç GPS+LBS+STATUS (0x26) detected from {}", remoteAddress);
                    handleLocationPacket(ctx, frame);
                }
                case MSG_STATUS -> {
                    logger.info("üìä STATUS PACKET (0x13) detected from {}", remoteAddress);
                    handleLocationPacket(ctx, frame);
                    // handleStatusPacketForV5Device(ctx, frame);
                }
                case MSG_HEARTBEAT -> {
                    logger.info("üíì HEARTBEAT PACKET (0x23) detected from {}", remoteAddress);
                    handleHeartbeat(ctx, frame);
                }
                case MSG_LBS_MULTIPLE -> {
                    logger.info("üì∂ LBS MULTIPLE PACKET (0x24) detected from {}", remoteAddress);
                    // handleLBSPacket(ctx, frame);
                }
                case MSG_COMMAND_RESPONSE -> {
                    logger.info("üì§ COMMAND RESPONSE (0x8A) detected from {}", remoteAddress);
                    handleCommandResponse(ctx, frame);
                }
                case MSG_LOCATION_0x94 -> {
                    logger.info("üìç LOCATION PACKET (0x94) detected from {}", remoteAddress);
                    handleLocationPacket(ctx, frame);
                }
                case MSG_GPS_PHONE_NUMBER -> {
                    logger.info("üìç GPS+PHONE PACKET (0x1A) detected from {}", remoteAddress);
                    handleLocationPacket(ctx, frame);
                }
                case MSG_GPS_OFFLINE -> {
                    logger.info("üìç GPS OFFLINE PACKET (0x15) detected from {}", remoteAddress);
                    handleLocationPacket(ctx, frame);
                }
                case MSG_LBS_PHONE -> {
                    logger.info("üì∂ LBS+PHONE PACKET (0x17) detected from {}", remoteAddress);
                    handleLocationPacket(ctx, frame);
                    // handleLBSPacket(ctx, frame);
                }
                case MSG_LBS_EXTEND -> {
                    logger.info("üì∂ LBS EXTEND PACKET (0x18) detected from {}", remoteAddress);
                    handleLocationPacket(ctx, frame);
                    // handleLBSPacket(ctx, frame);
                }
                case MSG_GPS_DOG -> {
                    logger.info("üìç GPS DOG PACKET (0x32) detected from {}", remoteAddress);
                    handleLocationPacket(ctx, frame);
                }
                default -> {
                    logger.warn("‚ùì UNKNOWN PROTOCOL 0x{:02X} detected from {}", protocolNumber, remoteAddress);
                    handleUnknownPacket(ctx, frame);
                }
            }
        } catch (Exception e) {
            logger.error("üí• Error processing protocol 0x{:02X} from {}: {}",
                    protocolNumber, remoteAddress, e.getMessage(), e);
            sendGenericAck(ctx, frame);
        }
    }

    /**
     * Login handler with proper variant persistence
     */
    private void handleLogin(ChannelHandlerContext ctx, MessageFrame frame) {
        String remoteAddress = ctx.channel().remoteAddress().toString();

        try {
            String loginHex = ByteBufUtil.hexDump(frame.content());
            logger.info("üîê LOGIN frame content: {}", loginHex);

            IMEI imei = gt06ParsingMethods.extractIMEI(frame);
            if (imei == null) {
                logger.warn("‚ùå Failed to extract IMEI from login frame from {}", remoteAddress);
                ctx.close();
                return;
            }

            logger.info("üîê Login request from IMEI: {}", imei.value());


            DeviceSession session = DeviceSession.create(imei);
            session.setChannelId(ctx.channel().id().asShortText());
            session.setRemoteAddress(remoteAddress);

            session.authenticate();

            // Save session BEFORE sending ACK to ensure persistence
            sessionService.saveSession(session);
            
            // Verify the save worked
            Optional<DeviceSession> savedSession = sessionService.getSession(ctx.channel());
            if (savedSession.isPresent()) {
                String savedVariant = savedSession.get().getDeviceVariant();
                logger.info("‚úÖ Session saved successfully - Variant verified: {} for IMEI: {}",
                        savedVariant, imei.value());
            } else {
                logger.error("‚ùå Session save failed for IMEI: {}", imei.value());
            }

            logger.info("‚úÖ Session authenticated and saved for IMEI: {} (Session ID: {}, Variant: {})",
                    imei.value(), session.getId(), session.getDeviceVariant());

            ByteBuf ack = gt06ParsingMethods.buildLoginAck(frame.serialNumber());
            ctx.writeAndFlush(ack).addListener(future -> {
                if (future.isSuccess()) {
                    logger.info("‚úÖ Login ACK sent to {} (IMEI: {})", remoteAddress, imei.value());
                    logger.info("üîÑ Connection kept open for further communication from IMEI: {}", imei.value());
                } else {
                    logger.error("‚ùå Failed to send login ACK to {}", remoteAddress);
                    ctx.close();
                }
            });

        } catch (Exception e) {
            logger.error("üí• Error handling login from {}: {}", remoteAddress, e.getMessage(), e);
            ctx.close();
        }
    }

    /**
     * Enhanced location packet handling with immediate display
     */
    private void handleLocationPacket(ChannelHandlerContext ctx, MessageFrame frame) {
        String remoteAddress = ctx.channel().remoteAddress().toString();
        Optional<DeviceSession> sessionOpt = getAuthenticatedSession(ctx);
        if (sessionOpt.isEmpty()) {
            logger.warn("‚ùå No authenticated session for location from {}", remoteAddress);
            return;
        }
        try {
            DeviceSession session = sessionOpt.get();
            String imei = session.getImei() != null ? session.getImei().value() : "unknown";
            String sid = session.getId() != null ? session.getId() : "unknown-id";
            
            // Check if this is actually a GPS location packet
            int protocol = frame.protocolNumber();
            boolean isGpsLocationPacket = (protocol == 0x12 || protocol == 0x22 || protocol == 0x94);
            
            if (isGpsLocationPacket) {
                logger.info("üìç Processing GPS location packet (0x{:02X}) for IMEI: {}", protocol, imei);
                
                // Only parse location data for actual GPS packets
                LocationDto location = gt06ParsingMethods.parseLocation(frame.content());
                
                if (location != null) {
                    // IMMEDIATE location display
                    var protoLocation = LocationMapper.toProto(location);
                    if (protoLocation != null) {
                        kafkaAdapter.sendMessage("location.device", sid, protoLocation.toByteArray());
                        logger.info("üìç Got location packet for IMEI: {}", imei);
                    }
                    session.markLocationDataReceived();
                } else {
                    logger.warn("‚ùå Failed to parse location data for IMEI: {} - Raw data: {}",
                            imei, ByteBufUtil.hexDump(frame.content()));
                }
            } else {
                // Handle non-GPS packets (status, heartbeat, etc.)
                logger.info("üìä Processing status packet (0x{:02X}) for IMEI: {}", protocol, imei);
            }
            
            // Always log device report for debugging (but don't parse as location)
            logDeviceReport(ctx, frame.content(), imei, remoteAddress, frame);
            
            logger.info("üìç Packet processed locally (Kafka disabled as requested) for IMEI: {}", imei);
            session.updateActivity();
            sessionService.saveSession(session);
            sendGenericAck(ctx, frame);
            
        } catch (Exception e) {
            logger.error("üí• Error handling packet from {}: {}", remoteAddress, e.getMessage(), e);
            sendGenericAck(ctx, frame);
        }
    }


  
// * FIXED: Log device report with complete device status, location data, LBS info, alarms, and debugging data.
private void logDeviceReport(ChannelHandlerContext ctx, ByteBuf content, String imei, String remoteAddress, MessageFrame frame) {
    try {
        content.resetReaderIndex();
        String fullRawPacket = ByteBufUtil.hexDump(content);
        String serverTimestamp = LocalDateTime.now().format(DateTimeFormatter.ISO_LOCAL_DATE_TIME) + "Z";
        int frameLen = content.readableBytes();

        // Parse all data sections
        LocationDto location = gt06ParsingMethods.parseLocation(content);
        DeviceStatusDto deviceStatus = gt06ParsingMethods.parseDeviceStatus(content);
        DeviceIOPortsDto ioData = gt06ParsingMethods.parseIOPorts(content, location.speed());
        DeviceLbsDataDto lbs = gt06ParsingMethods.parseLBSData(content);
        AlarmStatusDto alarmData = gt06ParsingMethods.parseAlarms(content);
        DeviceExtendedFeatureDto featureData = gt06ParsingMethods.parseExtendedFeatures(content);

        logger.info("üì° Device Report Log ===========================================>");
        // üïí TIMESTAMP SECTION -------------------->
        logger.info("üïí Timestamp -------------------->");
        logger.info("   üì© Server Time : {}", serverTimestamp);
        logger.info("   üì° RemoteAddress : {}", remoteAddress);
        logger.info("   üì° IMEI        : {}", imei);       
        logger.info("   üì¶ Protocol      : 0x{} ({})", String.format("%02X", frame.protocolNumber()), protocolName(frame.protocolNumber()));  
        logger.info("   üîë Raw Packet    : {}", fullRawPacket);
        logger.info("   üìè FrameLen      : {}   | Checksum : ‚úÖ OK  | Duration : {}ms ", frameLen, System.currentTimeMillis() % 100);        
        
        // üåç LOCATION DATA -------------------->
        logger.info("üåç Location Data -------------------->");
        logger.info("   üóìÔ∏è PktTime     : {}", location.timestamp());
        logger.info(String.format("   üìç Lat/Lon     : %.6f¬∞ %s , %.6f¬∞ %s", Math.abs(location.latitude()), location.latitude() >= 0 ? "N" : "S", Math.abs(location.longitude()), location.longitude() >= 0 ? "E" : "W"));
        logger.info("   üöó Speed       : {} km/h      üß≠ Heading : {}¬∞", location.speed(), location.course());
        logger.info("   üõ∞Ô∏è Satellites : {}", location.satellites());
        // Accuracy (~ meters) ‚Üí ‚ùå Not in GT06 packet (server usually estimates from satellite count).
        logger.info("   üéØ Accuracy    : ~{} m", location.accuracy());
        logger.info("   üîÑ GPS Status  : {}", location.gpsValid() ? "Valid" : "Invalid");
        // Fix Type (2D/3D) ‚Üí Derived from satellites count, not raw in packet.
        logger.info("   üîÑ Fix Type    : {}", location.satellites() >= 4 ? "3D Fix" : (location.satellites() >= 2 ? "2D Fix" : "No Fix"));
        logger.info("   #Ô∏è‚É£ Serial     : {}           üè∑Ô∏è Event : Normal Tracking (0x{})",  frame.serialNumber(),  String.format("%02X", frame.protocolNumber()));

        // üîã DEVICE STATUS -------------------->
        logger.info("üîã Device Status -------------------->");
        logger.info("   üóÉÔ∏è Packet      : 0x{}", Integer.toHexString(deviceStatus.statusBits()));
        logger.info("   üîë Ignition    : {} (ACC={})   üî¶ ACC Line : {}", deviceStatus.ignition() ? "ON" : "OFF", deviceStatus.accRaw(), deviceStatus.ignition() ? "Active" : "Inactive");
        logger.info("   üîå Battery     : {} mV ({} V, {}%)   üîã Ext Power : {}", deviceStatus.batteryVoltage(), String.format("%.1f", deviceStatus.batteryVoltage() / 1000.0), deviceStatus.batteryPercent(), deviceStatus.externalPower() ? "Connected" : "Disconnected");
        logger.info("   ‚ö° Charging    : {} {}", deviceStatus.charging() ? "‚úÖ" : "‚ùå", deviceStatus.charging() ? "Yes" : "No");
        logger.info("   üì° GSM Signal  : {} dBm   üì∂ Level : {}", deviceStatus.gsmSignal(), deviceStatus.signalLevel());
        logger.info("   üõ∞Ô∏è GPS Fixed   : {}   üß≠ Direction : {}¬∞   üõ∞Ô∏è Satellites : {}", deviceStatus.gpsFixed() ? "Yes" : "No", deviceStatus.direction(), deviceStatus.satellites());
        logger.info("   üîã Battery Lvl : {}   üîå Voltage Lvl : {}", deviceStatus.batteryLevelText(), deviceStatus.voltageLevelText());

        // üîå Device I/O Ports -------------------->
        logger.info(" üîå Device I/O Ports -------------------->");    
        logger.info("   üóÉÔ∏è I/O Hex       : {}", ioData.ioHex());
        logger.info("   üîë IN1 / Ignition : {}", ioData.ignition() ? "ON ‚úÖ" : "OFF ‚ùå");
        logger.info("   üõ∞Ô∏è Motion        : {}", ioData.motion());
        logger.info("   üîå IN2           : {}", ioData.input2());
        logger.info("   üîå OUT1 (Relay)  : {}", ioData.out1());
        logger.info("   üîå OUT2 (Relay)  : {}", ioData.out2());
        logger.info("   ‚ö° ADC1 Voltage  : {} V", ioData.adc1Voltage() != null ? String.format("%.2f", ioData.adc1Voltage()) : "N/A");
        logger.info("   ‚ö° ADC2 Voltage  : {} V", ioData.adc2Voltage() != null ? String.format("%.2f", ioData.adc2Voltage()) : "N/A");

        // üì° LBS Data -------------------->
        logger.info("üì° LBS Data -------------------->");
        logger.info("   üóÉÔ∏è Raw Hex    : {}", lbs.lbsHex());
        logger.info("   üåê MCC        : {}", lbs.mcc());
        logger.info("   üì∂ MNC        : {}", lbs.mnc());
        logger.info("   üóº LAC        : {}", lbs.lac());
        logger.info("   üóº CID        : {}", lbs.cid());
        logger.info("   üì° RSSI       : {} dBm", lbs.rssi());
        
        // üö® Alarm Data -------------------->
        logger.info("üö® GT06 Alarm Data -------------------->");
        logger.info("   üóÉÔ∏è Raw Hex          : 0x{}", alarmData.alarmHex());
        logger.info("   üÜò SOS Alarm        : {}", alarmData.sosAlarm() ? "TRIGGERED" : "OFF");
        logger.info("   üí• Vibration Alarm  : {}", alarmData.vibrationAlarm() ? "TRIGGERED" : "OFF");
        logger.info("   üõ†Ô∏è Tamper Alarm     : {}", alarmData.tamperAlarm() ? "TRIGGERED" : "OFF");
        logger.info("   üîã Low Battery      : {}", alarmData.lowBatteryAlarm() ? "TRIGGERED" : "OK");
        logger.info("   ‚ö° Over-speed Alarm : {}", alarmData.overSpeedAlarm() ? "YES" : "NO");
        logger.info("   üÖøÔ∏è Idle Alarm       : {}", alarmData.idleAlarm() ? "ACTIVE" : "OFF");
        
        // ‚öôÔ∏è GT06 Extended Features -------------------->
        logger.info("‚öôÔ∏è GT06 Extended Features -------------------->");
        logger.info("   üóÉÔ∏è Raw Hex            : 0x{}", featureData.featureHex());
        logger.info("   üì© SMS Commands       : {}", featureData.smsCommands() ? "SUPPORTED" : "NOT SUPPORTED");
        logger.info("   üò¥ Sleep Mode         : {}", featureData.sleepMode() ? "ACTIVE" : "OFF");
        logger.info("   ‚è±Ô∏è Upload Interval    : {} sec", featureData.uploadInterval());
        logger.info("   üìè Distance Upload    : {} meters", featureData.distanceUpload());
        logger.info("   ‚ù§Ô∏è Heartbeat Interval : {} sec", featureData.heartbeatInterval());
        logger.info("   üì∂ Cell Scan Count    : {}", featureData.cellScanCount());
        logger.info("   üì® Backup Mode        : {}", featureData.backupMode());

        // üó∫Ô∏è MAP LINKS -------------------->
        logger.info("üó∫Ô∏è Map Links -------------------->");
        logger.info(String.format("   üîó Google Maps   : https://www.google.com/maps/search/?api=1&query=%.6f,%.6f", location.latitude(), location.longitude()));
        logger.info(String.format("   üîó OpenStreetMap : https://www.openstreetmap.org/?mlat=%.6f&mlon=%.6f#map=16/%.6f/%.6f", location.latitude(), location.longitude(), location.latitude(), location.longitude()));

        logger.info("üì° Device Report Log <=========================================== END");

    } catch (Exception e) {
        logger.error("üí• Enhanced GT06 parsing error for IMEI {}: {}", imei, e.getMessage(), e);
    }
}


    /**
     * Map GT06 protocol number ‚Üí human-readable name.
     * Covers Login, Location, Status, Alarm, LBS, Command, Heartbeat, etc.
     */
    private String protocolName(int proto) {
        return switch (proto) {
            case 0x01 -> "Login";
            case 0x05 -> "Heartbeat";
            case 0x08 -> "GPS Location (old type)";
            case 0x10 -> "LBS Location";
            case 0x12 -> "GPS Location (0x12 type)";
            case 0x13 -> "Status Info";
            case 0x15 -> "String Information";
            case 0x16 -> "Alarm Packet";
            case 0x1A -> "Extended Status Info";
            case 0x80 -> "Command Response (0x80)";
            case 0x8A -> "Command Response (0x8A)";
            case 0x94 -> "GPS Location (0x94 type)";
            case 0x97 -> "OBD / Extended Data (some models)";
            default -> String.format("Unknown (0x%02X)", proto);
        };
    }

    /**
     * Handle unknown packets
     */
    private void handleUnknownPacket(ChannelHandlerContext ctx, MessageFrame frame) {
        String remoteAddress = ctx.channel().remoteAddress().toString();
        int protocolNumber = frame.protocolNumber();

        logger.warn("‚ùì Unknown packet: Protocol=0x{:02X}, Length={}, From: {}",
                protocolNumber, frame.content().readableBytes(), remoteAddress);

        String hexData = ByteBufUtil.hexDump(frame.content());
        logger.warn("‚ùì Raw data: {}", hexData);

        sendGenericAck(ctx, frame);
    }

    /**
     * Enhanced heartbeat handling
     */
    private void handleHeartbeat(ChannelHandlerContext ctx, MessageFrame frame) {
        Optional<DeviceSession> sessionOpt = sessionService.getSession(ctx.channel());

        if (sessionOpt.isPresent()) {
            DeviceSession session = sessionOpt.get();
            session.updateActivity();
            sessionService.saveSession(session);

            String imei = session.getImei() != null ? session.getImei().value() : "unknown";
            logger.info("üíì Heartbeat from IMEI: {} (Variant: {})", imei, session.getDeviceVariant());
        } else {
            logger.info("üíì Heartbeat from unknown session: {}", ctx.channel().remoteAddress());
        }

        sendGenericAck(ctx, frame);
    }

    /**
     * Handle command responses
     */
    private void handleCommandResponse(ChannelHandlerContext ctx, MessageFrame frame) {
        Optional<DeviceSession> sessionOpt = getAuthenticatedSession(ctx);
        if (sessionOpt.isPresent()) {
            DeviceSession session = sessionOpt.get();
            String imei = session.getImei() != null ? session.getImei().value() : "unknown";

            logger.info("üì§ Command response from IMEI: {} (Serial: {})", imei, frame.serialNumber());
        }

        sendGenericAck(ctx, frame);
    }

    /**
     * Get authenticated session
     */
    private Optional<DeviceSession> getAuthenticatedSession(ChannelHandlerContext ctx) {
        try {
            Optional<DeviceSession> sessionOpt = sessionService.getSession(ctx.channel());

            if (sessionOpt.isEmpty()) {
                logger.debug("üì≠ No session found for channel");
                return Optional.empty();
            }

            DeviceSession session = sessionOpt.get();
            if (!session.isAuthenticated()) {
                String imei = session.getImei() != null ? session.getImei().value() : "unknown";
                logger.warn("üîê Session NOT authenticated for IMEI: {}", imei);
                return Optional.empty();
            }

            return sessionOpt;

        } catch (Exception e) {
            logger.error("üí• Error getting authenticated session: {}", e.getMessage(), e);
            return Optional.empty();
        }
    }

    /**
     * Send acknowledgment
     */
    private void sendGenericAck(ChannelHandlerContext ctx, MessageFrame frame) {
        try {
            ByteBuf ack = gt06ParsingMethods.buildGenericAck(frame.protocolNumber(), frame.serialNumber());

            logger.debug("üì§ Sending ACK for protocol 0x{:02X}, serial {}",
                    frame.protocolNumber(), frame.serialNumber());

            ctx.writeAndFlush(ack);

        } catch (Exception e) {
            logger.error("üí• Error sending ACK: {}", e.getMessage(), e);
        }
    }

    @Override
    public void userEventTriggered(ChannelHandlerContext ctx, Object evt) {
        if (evt instanceof IdleStateEvent event) {
            if (event.state() == IdleState.ALL_IDLE) {
                logger.warn("‚è±Ô∏è Connection idle timeout: {}", ctx.channel().remoteAddress());
                ctx.close();
            }
        }
    }

    @Override
    public void channelInactive(ChannelHandlerContext ctx) {
        String remoteAddress = ctx.channel().remoteAddress().toString();
        String channelId = ctx.channel().id().asShortText();

        logger.info("üîå Connection closed: {} (Channel ID: {})", remoteAddress, channelId);

        channelRegistry.unregister(channelId);
        sessionService.removeSession(ctx.channel());
    }

    @Override
    public void exceptionCaught(ChannelHandlerContext ctx, Throwable cause) {
        logger.error("üí• Exception from {}: {}",
                ctx.channel().remoteAddress(), cause.getMessage(), cause);

        // Don't close for minor errors - GT06 devices need persistent connections
        if (cause instanceof java.io.IOException) {
            logger.warn("üîå I/O exception, closing: {}", ctx.channel().remoteAddress());
            ctx.close();
        } else {
            logger.debug("üîÑ Continuing after exception");
        }
    }
}